# tg-bot-afisha

./: .dockerignore  .env.example  .gitignore  CUsersSemyon.claudeprojectsc--Users-Semyon-Documents-Projects-tg-bot-afisha602549fb-b824-48ad-8b74-7b4a78447dcftool-resultsfrontend_diff.txt  HANDOFF.md  README.md  about-gpu-2026-07-02T20-10-03-722Z.txt  alembic.ini  docker-compose.yml  onboarding-preview.html  pyproject.toml
.github/workflows/: ci.yml
admin/: index.html  package-lock.json  package.json  vite.config.ts
admin/src/: App.tsx  main.tsx
apps/adstat/: __init__.py  antifraud.py  cookies.py  discover.py  llm_classify.py  run.py  score.py  service.py  telega.py  telemetr.py  telethon_src.py  tgstat.py  tme.py
apps/api/: main.py
connectors/: base.py  registry.py
core/: categorization.py  cities.py  contracts.py  invite.py  llm_limiter.py  tasklock.py
docs/: design-ideas.md
landing/: index.html  robots.txt  sitemap.xml
migrations/: env.py
miniapp/: index.html  package-lock.json  package.json  tilerender.html  tsconfig.json  vite.config.ts
scripts/: adstat_import_account.py  backfill_categories_prices.py  backfill_event_times.py  backfill_favorite_reminders.py  backfill_venue_hours.py  dedup_healthcheck.py  expire_past_events.py  merge_duplicate_events.py  merge_duplicate_venues.py  merge_venues_fuzzy.py  pg_backup.sh  reset_yandex_source.py  resplit_multivenue_events.py  seed_city_venue_channels.py  seed_spb_venue_channels.py  seed_venue_channels.py  seed_venue_channels_multicity.py  telethon_login.py  telethon_login_driver.py  telethon_login_qr.py
(+470 files in other folders)
